# fancy-ffmpeg

./: .gitignore  Cargo.toml  flake.nix
src/: ffprobe.rs
