[package]
name = "fancy-ffmpeg"
version = "0.0.2"
edition = "2024"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@matilde.pet>"]
description = "Fancy wrapper to ffmpeg cli"
readme = "README.md"
documentation = "https://docs.rs/fancy-ffmpeg"
repository = "https://github.com/tailwags/fancy-ffmpeg"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", optional = true, features = ["process"] }

[dev-dependencies]
anyhow = "1.0.102"
tokio = { version = "1.50.0", features = ["full"] }

[features]
tokio = ["dep:tokio"]
